@@ -545,14 +545,15 @@ AP_DECLARE(int) ap_getline(char *s, int n, request_rec *r, int fold);
  *          should be read; if *s==NULL, a buffer of the necessary size
  *          to hold the data will be allocated from the request pool
  * @param n The size of the buffer
+ * @param read The length of the line.
  * @param r The request
  * @param fold Whether to merge continuation lines
- * @return The length of the line, if successful
- *         n, if the line is too big to fit in the buffer
- *         -1 for miscellaneous errors
- * @deffunc int ap_method_number_of(const char *method)
+ * @return APR_SUCCESS, if successful
+ *         APR_ENOSPC, if the line is too big to fit in the buffer
+ *         Other errors where appropriate
  */
-AP_DECLARE(int) ap_rgetline(char **s, int n, request_rec *r, int fold);
+AP_DECLARE(apr_status_t) ap_rgetline(char **s, apr_size_t n, apr_size_t *read,
+                                     request_rec *r, int fold);
 
 /**
  * Get the method number associated with the given string, assumed to
